<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="ContentDescription" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="64dp"
            android:layout_marginTop="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/textView2"
            style="@style/Theme.UINSUKAUI.TextView.Regular.Black.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/uin_sunan_kalijaga"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            style="@style/Theme.UINSUKAUI.TextView.Bold.Black.Large"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sistem_informasi_akademik"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            style="@style/Theme.UINSUKAUI.Button.Black"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_outline_login"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            android:text="@string/action_sign_in"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            style="@style/Theme.UINSUKAUI.EditText.Outline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="8dp"
            android:hint="@string/prompt_password"
            android:drawableStart="@drawable/ic_vpn_key"
            android:drawablePadding="10dp"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            tools:ignore="Autofill" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username"
            style="@style/Theme.UINSUKAUI.EditText.Outline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/prompt_email"
            android:drawableStart="@drawable/ic_account_circle"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="Autofill" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_calendar"
                        tools:ignore="ContentDescription" />

                    <TextView
                        style="@style/Theme.UINSUKAUI.TextView.Regular.Black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="5dp"
                        android:gravity="center"
                        android:text="@string/kalendar_dan_pedoman_akademik" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_people"
                        tools:ignore="ContentDescription" />

                    <TextView
                        style="@style/Theme.UINSUKAUI.TextView.Regular.Black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="5dp"
                        android:gravity="center"
                        android:text="@string/mata_kuliah_dan_dosen" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_calendar"
                        tools:ignore="ContentDescription" />

                    <TextView
                        style="@style/Theme.UINSUKAUI.TextView.Regular.Black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="5dp"
                        android:gravity="center"
                        android:text="@string/panduan_dan_tarif_pembayaran" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>